# pdf-viewer

./: .gitignore  .gn  BUILD.gn  DEPS  Dockerfile  README.md  main.cpp
pdf-viewer/: BUILD.gn  CMakeLists.txt  DEPS
pdf-viewer/include/: application.h  color.h  layout.h  main_viewer_window.h  painter.h  widget.h
pdf-viewer/include/core/: rendered_page_cache.h
pdf-viewer/include/events/: resize_event.h
pdf-viewer/include/pdfium/: file_access_for_testing.h  file_access_test_loader.h  pdf_test_write_helper.h
pdf-viewer/include/viewer/: document.h  layout.h  page.h  panel.h  panel_layout.h  params.h  scroll.h  slot.h  view.h  zoom.h
pdf-viewer/patches/: install-build-deps.sh  pdfium.diff
pdf-viewer/src/: application.cpp  color.cpp  globals.cpp  layout.cpp  main.cpp  main_sdltest.cpp  main_viewer_window.cpp  painter.cpp  widget.cpp
pdf-viewer/src/core/: rendered_page_cache.cpp
pdf-viewer/src/events/: text_input_event.cpp
pdf-viewer/src/include/: globals.h  layout.h  macros.h  paint_device.h  widget.h
pdf-viewer/src/include/events/: key_event.h
pdf-viewer/src/include/pdfium/: free_deleter.h  png_image_utils.h
pdf-viewer/src/include/viewer/: geometry.h  panel.h
pdf-viewer/src/pdfium/: file_access_for_testing.cpp  file_access_test_loader.cpp  pdf_test_write_helper.cpp  png_image_utils.cpp
pdf-viewer/src/src/: deja_vu_sans_mono.cpp  emscripten.cpp  layoutable.cpp  painter.cpp  to_utf16.cpp  widget.cpp
pdf-viewer/src/src/events/: key_event.cpp
pdf-viewer/src/src/pdfium/: file_access_for_testing.cpp  png_image_utils.cpp
pdf-viewer/src/src/viewer/: document.cpp  view.cpp
pdf-viewer/src/viewer/: document.cpp  geometry.cpp  layout.cpp  panel.cpp  panel_layout.cpp  params.cpp  scroll.cpp  slot.cpp  view.cpp  zoom.cpp
pdf-viewer/tools/: docker-setup.sh  setup.sh
